[workspace]
members = [
  "app",
  "bin/bin_windows",
  "consts",
  "fw/fw_actor",
  "fw/fw_anim",
  "fw/fw_button",
  "fw/fw_cursor",
  "fw/fw_ftxm", "fw/fw_transition",
  "mod/mod_level",
  "mod/mod_plant",
  "mod/mod_userdata",
  "mod/mod_zombie",
  "scene/scene_base",
  "scene/scene_game", "scene/scene_splash",
  "scene/scene_title",
]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
debug = false
lto = "thin"
strip = "symbols"
