[package]
edition = "2021"
name = "app"
version = "0.1.0"

[dependencies]
fw_actor = {path = "../fw/fw_actor"}
fw_anim = {path = "../fw/fw_anim"}
fw_button = {path = "../fw/fw_button"}
fw_cursor = {path = "../fw/fw_cursor"}
fw_ftxm = {path = "../fw/fw_ftxm"}
mod_item = {path = "../mod/mod_item"}
mod_level = {path = "../mod/mod_level"}
mod_plant = {path = "../mod/mod_plant"}
mod_userdata = {path = "../mod/mod_userdata"}
mod_zombie = {path = "../mod/mod_zombie"}
scene_base = {path = "../scene/scene_base"}
scene_game = {path = "../scene/scene_game"}
scene_reward = {path = "../scene/scene_reward"}
scene_splash = {path = "../scene/scene_splash"}
scene_title = {path = "../scene/scene_title"}

bevy = {version = "0.14.2", features = ["jpeg"]}
bevy_spine = "0.10.1"
zune-jpeg = {version = "0.5.0-rc0"}
