[package]
edition = "2021"
name = "mod_plant"
version = "0.1.0"

[dependencies]
bevy = "0.14.2"
bevy_spine = "0.10.1"
consts = {path = "../../consts"}
fw_actor = {path = "../../fw/fw_actor"}
fw_cursor = {path = "../../fw/fw_cursor"}
serde = {version = "1.0.215", features = ["derive"]}
serde-xml-rs = "0.6.0"
