[package]
edition = "2021"
name = "scene_game"
version = "0.1.0"

[dependencies]
bevy = "0.14.2"
bevy_spatial = "0.9.1"
bevy_spine = "0.10.1"
consts = {path = "../../consts"}
fw_actor = {path = "../../fw/fw_actor"}
fw_anim = {path = "../../fw/fw_anim"}
fw_cursor = {path = "../../fw/fw_cursor"}
fw_ftxm = {path = "../../fw/fw_ftxm"}
mod_plant = {path = "../../mod/mod_plant"}
mod_zombie = {path = "../../mod/mod_zombie"}
rand = "0.8.5"
scene_base = {path = "../scene_base"}
scene_res_game = {path = "../../scene_res/scene_res_game"}
