[package]
edition = "2021"
name = "scene_game"
version = "0.1.0"

[dependencies]
consts = {path = "../../consts"}
fw_actor = {path = "../../fw/fw_actor"}
fw_anim = {path = "../../fw/fw_anim"}
fw_button = {path = "../../fw/fw_button"}
fw_cursor = {path = "../../fw/fw_cursor"}
fw_ftxm = {path = "../../fw/fw_ftxm"}
fw_transition = {path = "../../fw/fw_transition"}
mod_level = {path = "../../mod/mod_level"}
mod_plant = {path = "../../mod/mod_plant"}
mod_userdata = {path = "../../mod/mod_userdata"}
mod_zombie = {path = "../../mod/mod_zombie"}
scene_base = {path = "../scene_base"}

bevy = "0.14.2"
bevy_spatial = "0.9.1"
bevy_spine = "0.10.1"
rand = "0.8.5"
